2004-04-21  Richard Hult  <richard@imendio.com>

	* gconf/gconf-database.c (gconf_database_unset): Init
	modified_sources to NULL since we access it later. Fixes random
	crashes.

2004-04-19  Mark McLoughlin  <mark@skynet.ie>

	Based on a patch from Julio Merino <jmmv@hispabsd.org>
	in bug #102825

	* configure.in: add a --enable-gtk=yes/no/auto (defaults to auto)

2004-04-19  Mark McLoughlin  <mark@skynet.ie>

	Patch Elijah Newren <bugsqueesher@yahoo.com> in bug #138009

	* examples/basic-gconf-app.c: (config_entry_commit):
	return a boolean so we don't crash.

2004-04-19  Mark McLoughlin  <mark@skynet.ie>

	Based on a patch from Ryan Lovett <ryan@ocf.berkeley.edu>
	in bug #95198.

	* backends/markup-backend.c: (resolve_address):
	  backends/xml-backend.c: (resolve_address): check to see
	if the dir exists before trying to create it rather than
	relying on EEXIST from mkdir.

2004-04-19  Mark McLoughlin  <mark@skynet.ie>

	* backends/dir-utils.[ch],
	  backends/val-encode.[ch]: remove last remenants
	of the BDB backend.

2004-04-19  Mark McLoughlin  <mark@skynet.ie>

	Tracked down by Gustavo GirÃ¡ldez  <gustavo.giraldez@gmx.net>
	in bug #139170

	* gconf/gconfd.c: (logfile_save): don't save default_db explicitly
	since its now stored in the same list as the other dbs - but do
	make sure that it gets saved as "def" rather than using its full
	address list.

2004-04-16  Colin Walters  <walters@redhat.com>

	* gconf/gconf-internals.c (gconf_activate_server): Move temporary
	directory creation into daemon code, so that we play better with
	SELinux.  Patch reviewed by (and several improvements suggested by)
	Mark McLoughlin <mark@skynet.ie>.

2004-04-13  Mark McLoughlin  <mark@skynet.ie>

	Fix pointed out by Frédéric L. W. Meunier <1@pervalidus.net>.

	* gconf.m4.in: add quotes around AM_GCONF_SOURCE_2 to
	quell autoconf's rudeness.

2004-04-08  Guntupalli Karunakar  <karunakar@freedomink.org>

        * configure.in: Added "gu" (Gujarati) to ALL_LINGUAS.
