@@ -1,3 +1,8 @@
+2004-04-23  Mark McLoughlin  <mark@skynet.ie>
+
+	* gconf/gconf-sources.c: (gconf_sources_new_from_addresses): return
+	NULL and the last error if we failed to resolve any of the addresses.
+
 2004-04-21  Richard Hult  <richard@imendio.com>
 
 	* gconf/gconf-database.c (gconf_database_unset): Init
